# i3-status-info

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  go.mod  go.sum  goreleaser.yml  main.go
.github/workflows/: new.yml  push.yml  release.yml
cmd/: battery.go  cpu.go  disk.go  load.go  mem.go  root.go  version.go  wifi.go
src/: main.rs
src/cmds/: cpu.rs  disk_io.rs  disk_uage.rs  icmp_check.rs  mem.rs  mod.rs  octoprint.rs  perfmode.rs  prusa_link.rs  tcp_check.rs  utils.rs
utils/: percentage.go  print.go
