[package]
name = "i3-status-info"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
sysinfo = "0.29.7"
procfs = "0.15.1"
ping = "0.4.1"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
compound_duration = "1.2.1"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
