[package]
name = "i3-status-info"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
sysinfo = "0.29.10"
procfs = "0.15.1"
ping = "0.5.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
diqwest = { version = "1.2.1", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
compound_duration = "1.2.1"
base64 = "0.21.5"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
